...
      {cancelButtonText ?? (isCriticalRisk ? t('common.button.reject') : t('common.button.cancel'))}
    </Button>
  )

  const confirmButton = confirmationButtonText ? (
    <Button
      key="confirm"
      variant={isCriticalRisk ? 'critical' : 'branded'}
      emphasis={isCriticalRisk ? 'secondary' : 'primary'}
      disabled={!confirmationEnabled}
      loading={confirmationLoading}
      size="large"
      testID={TestID.Confirm}
...
