appId: com.uniswap.mobile.dev
---
- launchApp:
    appId: 'com.uniswap.mobile.dev'
    clearState: true
    clearKeychain: true # optional: clear *entire* iOS keychain
- extendedWaitUntil:
    visible: 'Create a wallet'
- tapOn: 'Create a wallet'
- waitForAnimationToEnd
- tapOn: 'Skip'
- waitForAnimationToEnd
- tapOn: 'Skip'
- waitForAnimationToEnd
- tapOn: 'Skip'
- extendedWaitUntil:
    visible:
      id: 'confirm'
- tapOn:
    id: 'confirm'
- waitForAnimationToEnd
- tapOn: 'Send'
- waitForAnimationToEnd
- 'back'
